# yolo-event

./: .env.example  .gitignore  compose.yml  db_sink.py  init.sql  notes.md  producer.py  pyproject.toml
connect-config/: Readme.md  kafka-connect.properties  postgresql-sink.json.template
grafana-datasources/: postgres.yaml.template
